# Yoke

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
almanac/: README.md  topics.yaml
almanac/architecture/: README.md  capability-planning.md  codealmanac-integration.md  runtime-deployments.md  runtime-flow.md
almanac/concepts/: README.md  agent-folders.md  knowledge-packages.md  normalized-events.md  provider-surfaces.md  runs-and-sessions.md  workflows.md  yoke-harness.md
almanac/decisions/: README.md  codealmanac-uses-yoke-only-harness-adapters.md  provider-surfaces-first-class.md
almanac/guides/: debug-cli-runs.md
almanac/reference/: cli-and-run-storage.md
docs/: quickstart.md  reference.md  release.md
docs/live-conformance/: next-agent-brief.md  verification-matrix.md  worklog.md
docs/notes/: 0001-run-contract.md  0002-core-language.md  0003-provider-pressure.md  0004-claude-adapter.md  0005-codex-cli-bridge.md  0006-provider-surfaces.md  0007-sessions.md  0008-codex-app-server.md  (+279 more)
examples/: claude_run.py  claude_session.py  codex_app_server_goal.py  codex_app_server_resume.py  codex_app_server_run.py  codex_app_server_sync.py  codex_run.py  codex_session.py  folder_claude.py  live_folder_features.py  load_folder.py  provider_shaped.py  readme_sketch.py  workflow_claude.py
scripts/: smoke_harnesses.py
tests/: test_artifacts.py  test_authentication.py  test_capabilities.py  test_claude_events.py  test_claude_options.py  test_claude_readiness.py  test_cli.py  test_codex_app_events.py  test_codex_app_server_params.py  test_codex_python_sdk.py  test_codex_request_policy.py  test_codex_subagents.py  test_events.py  test_flows.py  test_folders.py  test_goals.py  test_history.py  test_opencode_agents.py  test_opencode_history.py  test_opencode_hook_bridge_wiring.py  test_opencode_hooks.py  test_opencode_parts.py  test_opencode_permission_approval.py  test_opencode_permissions.py  test_opencode_progress.py  test_opencode_provider_surface.py  test_opencode_runtime_deployment.py  test_opencode_send.py  test_provider_surface.py  test_public_api.py  test_readiness.py  test_results.py  test_run_failures.py  test_runtime_deployments.py  test_runtime_lifecycle.py  test_sessions.py  test_smoke_harnesses.py  test_store.py  test_structured_output.py  test_workflows.py
(+83 files in other folders)
