[project]
name = "almanac-yoke"
version = "0.1.5"
description = "A provider-neutral harness SDK for agent systems on Claude and Codex."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Almanac" }]
license = "Apache-2.0"
license-files = ["LICENSE.md"]
keywords = ["agents", "claude", "codex", "harness", "sdk"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
  "Topic :: Software Development",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "jsonschema>=4.23",
  "pydantic>=2.8",
  "pyyaml>=6.0",
]

[project.scripts]
yoke = "yoke.cli:main"

[project.optional-dependencies]
claude = ["claude-agent-sdk>=0.1"]
codex = ["openai-codex"]
all = ["claude-agent-sdk>=0.1", "openai-codex"]
dev = ["pytest>=8", "pytest-asyncio>=0.24", "ruff>=0.6"]

[project.urls]
Documentation = "https://github.com/AlmanacCode/Yoke#readme"
Issues = "https://github.com/AlmanacCode/Yoke/issues"
Repository = "https://github.com/AlmanacCode/Yoke"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/yoke"]

[tool.hatch.build.targets.sdist]
include = [
  "src/yoke",
  "README.md",
  "LICENSE.md",
  "pyproject.toml",
]
exclude = ["almanac"]

[tool.ruff]
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
pythonpath = ["src"]
